--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="Balagh is a multilingual civic platform that lets citizens submit and track complaints with live status updates." />
+    <meta name="theme-color" content="#0f172a" />
+    <title>Balagh | Civic Complaint Platform</title>
   </head>
   <body>
     <div id="root"></div>
